--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro da IA</h1>
+        <h1>notação científica na astronomia</h1>
         <div class="tela-inicial">
             <p>por volta do século III a.C, É atribuído ao filosofo e matemático grego Arquimedes a primeira tentativa conhecida de utilização de números em notação científica. fez uma estimativa para calcular o número de grãos de areia necessários para preencher o universo.
             </p>
